--- a/store/config/database.php.example
+++ b/store/config/database.php.example
@@ -3,4 +3,11 @@
   define('DB_USERNAME', 'root');
   define('DB_PASSWORD', 'root');
   define('DB_NAME', 'quizstuff');
+
+    // Create connection 
+  $conn = new mysqli(DB_SERVER, DB_USERNAME, DB_PASSWORD, DB_NAME);
+    // Check connection
+  if($conn->connect_error){
+    die("Connection failed: " . $conn->connect_error);
+  }
 ?>
