--- a/qm-version.json.example
+++ b/qm-version.json.example
@@ -2,17 +2,17 @@
   "installers": [
     {
       "architecture": "x64",
+      "version": "5.4-j30",
       "os": "windows",
       "sha1sum": "fb3935b3e079061de85a000de3de781d6e3a68ad",
-      "version": "5.4-J30",
-      "url": "/installers/QuizMachine5.4InstallerJ30.exe"
+      "url": "/installers/QuizMachineInstaller-5.4-j30-x64.exe"
     },
     {
       "architecture": "x86",
+      "version": "5.4-j30",
       "os": "windows",
       "sha1sum": "fb3935b3e079061de85a000de3de781d6e3a68ad",
-      "version": "4.2-L55",
-      "url": "/installers/QuizMachine4.2Installer.exe"
-    }
+      "url": "/installers/QuizMachineInstaller-5.4-j30-x64.exe"
+    },
   ]
 }
